--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <body>
             <video autoplay muted loop id="myVideo">
                     <source src="bg.mp4" type="video/mp4">
-                </video>  
+                </video>
         <div id="start">
-           
+
             <div>
-                <h1>Battle Royal</h1>
+                <h1>Battle Royale</h1>
                 <p>Learn About The World's Biggest Gaming Genre</p>
             </div>
             <div id="button" style="margin:50px;padding:10px;" >
                 <a href="info.html" style="text-decoration: none;color:inherit">
-                    Click Here <br>To Know More
+                    Click Here To Know More
                 </a>
             </div>
         </div>
